Fix: [Trading page] scrolls bar on Firefox (#390)

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -383,6 +383,7 @@ body, html {
       height: 100%;
       padding: 0 !important;
       overflow-y: scroll;
+      scrollbar-width: none;
     }
   }
 }
